--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "php": ">=7.1.0",
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.4.4",
-        "silverstripe-themes/simple": "~3.2.0"
+        "silverstripe-themes/simple": "~3.2.0",
+        "axllent/silverstripe-bootstrap-forms": "^2.0.3"
+
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
